[package]
name = "SoundFix"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.58.0", features = [
    "Foundation",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",

    "Win32_Foundation",

    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",

    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics",
    "Win32_System_WinRT_Graphics_Capture",

    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }
